Revert "Use --add-opens because of reflective access."
This reverts commit b7ee23cf694983f24edd559c21123e16d7bc1dbe.